--- a/index.html
+++ b/index.html
@@ -7,6 +7,36 @@
     <link rel="stylesheet" href="all.css">
 </head>
 <body>
-    <h1>標題</h1>
+    <div class="main">
+        <div class="header">
+            <div class="navBg b">
+                <div class="nav d-flex f-f">
+                    <div class="btn1 ">WILLIAM LEE</div>
+                    <div class="btn2 ">BASED IN TAIWAN</div>
+                    <div class="btn3 ">CURRENTLY FRONT END<br> ENGINEER AT HEXSCHOOL</div>
+                    <div class="btn4 ">CONTACT ME</div>
+                </div>
+            </div>
+            <div class="headerimg d-flex">
+                <div class="img b"></div>
+                <div class="content b f-f d-flex">
+                    <h1 class="fc-w">Hi</h1>
+                    <h2 class="fc-w">I’m a front-end <br>developer</h2>
+                    <h3>William</h3>
+                    <div class="contactBg d-flex">
+                        <div class="contact fc-w">contact me</div>
+                        <div class="arrow">arrow_outward</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="section1"></div>
+            <div class="section2"></div>
+            <div class="section3"></div>
+            <div class="section4"></div>
+        </div>
+        <div class="footer"></div>
+    </div>
 </body>
 </html>
