--- a/index.html
+++ b/index.html
@@ -10,22 +10,23 @@
     <div class="main">
         <div class="header">
             <div class="navBg b">
-                <div class="nav d-flex f-f">
+                <div class="nav d-flex">
                     <div class="btn1 ">WILLIAM LEE</div>
                     <div class="btn2 ">BASED IN TAIWAN</div>
                     <div class="btn3 ">CURRENTLY FRONT END<br> ENGINEER AT HEXSCHOOL</div>
                     <div class="btn4 ">CONTACT ME</div>
                 </div>
             </div>
-            <div class="headerimg d-flex">
-                <div class="img b"></div>
-                <div class="content b f-f d-flex">
-                    <h1 class="fc-w">Hi</h1>
-                    <h2 class="fc-w">I’m a front-end <br>developer</h2>
-                    <h3>William</h3>
-                    <div class="contactBg d-flex">
-                        <div class="contact fc-w">contact me</div>
-                        <div class="arrow">arrow_outward</div>
+            <div>
+                <div class="container d-flex align-items-center">
+                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/people.png?raw=true" alt="man" />
+                    <div>
+                        <h1 class="h2">Hi<br>
+                            I’m a front-end developer
+                            <span class="h1 text-primary">William
+                            </span>
+                        </h1>
+                        <a href="#">contact me<img src="..." alt=""/></a>
                     </div>
                 </div>
             </div>
