--- a/index.html
+++ b/index.html
@@ -8,35 +8,77 @@
 </head>
 <body>
     <div class="main">
+        <!-- firstPage -->
         <div class="header">
             <div class="navBg b">
-                <div class="nav d-flex">
-                    <div class="btn1 ">WILLIAM LEE</div>
-                    <div class="btn2 ">BASED IN TAIWAN</div>
-                    <div class="btn3 ">CURRENTLY FRONT END<br> ENGINEER AT HEXSCHOOL</div>
-                    <div class="btn4 ">CONTACT ME</div>
+                <div class="nav d-flex ">
+                    <a href="#" class="btn1 ">WILLIAM LEE</a>
+                    <a href="#" class="btn2 ">BASED IN TAIWAN</a>
+                    <a href="#" class="btn3 ">CURRENTLY FRONT END<br> ENGINEER AT HEXSCHOOL</a>
+                    <a href="#" class="btn4 ">CONTACT ME</a>
                 </div>
             </div>
-            <div>
-                <div class="container d-flex align-items-center">
-                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/people.png?raw=true" alt="man" />
-                    <div>
-                        <h1 class="h2">Hi<br>
-                            I’m a front-end developer
-                            <span class="h1 text-primary">William
-                            </span>
-                        </h1>
-                        <a href="#">contact me<img src="..." alt=""/></a>
+            <div class="container d-flex align-items-center">
+                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/people.png?raw=true" alt="man" />
+                <div>
+                    <h1 class="h2">Hi<br>
+                        I’m a front-end developer
+                        <span class="h1 text-primary t-a-r">William
+                        </span>
+                    </h1>
+                    <div class="d-flex jcfe">
+                        <a href="#" class="contactPd contactWhite">contact me<img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/arrow_outward.png?raw=true" alt=""/></a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="section1"></div>
-            <div class="section2"></div>
-            <div class="section3"></div>
-            <div class="section4"></div>
+        <!-- secondPage -->
+         <div class="intro">
+             <div class="container d-flex">
+                <div class="intro-w">
+                    <h2 class="h2">Introduction</h2>
+                    <p class="mt-36 lh-36">Hi, I'm William Lee, a Front-End Developer with a passion for building beautiful and responsive websites that provide an optimal user experience.</p>
+                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/sparkle-sm.png?raw=true" alt="">    
+                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/sparkle-sm.png?raw=true" alt="">    
+                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/sparkle-sm.png?raw=true" alt="">
+                </div>
+                <ul class="d-flex">
+                    <li class="mr-24"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/sparkle.png?raw=true" alt=""></li>
+                    <li class="mr-24"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/photographer.png?raw=true" alt=""></li>
+                    <li class="mr-24"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/people-2.png?raw=true" alt=""></li>
+                </ul>
+            </div>
         </div>
+        <!-- thirdPage -->
+         <div class="about d-flex">
+            <div class="sideList d-flex">
+                <div class="content d-flex">
+                    <div class="sideText d-flex fd-c">
+                        <h3>01<br>Attention to Detail</h3>
+                        <p>Meticulous code analysis and optimization.</p>
+                    </div>
+                    <div class="sideText d-flex fd-c">
+                        <h3>02<br>Adaptability</h3>
+                        <p>Swift learning of new technologies.</p>
+                    </div>
+                    <div class="sideText d-flex fd-c">
+                        <h3>03<br>Problem Solver</h3>
+                        <p>Identifying and resolving issues.</p>
+                    </div>
+                    <div class="sideText d-flex fd-c">
+                        <h3>04<br>Team Player</h3>
+                        <p>Collaborates and shares ideas.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="content">
+                <div class="aboutme">
+                    <h2 class="h2">About Me</h2>
+                    <p>With over 5 years of experience, I'm proficient in HTML, CSS, JavaScript, jQuery, and React. I have a strong understanding of user experience design and accessibility. I'm always learning new technologies and techniques to stay up-to-date in the field.</p>
+                </div>
+            </div>
+         </div>
+         <!-- fouthPage -->
         <div class="footer"></div>
     </div>
 </body>
