--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <!-- secondPage -->
-         <div class="intro">
+        <div class="intro">
              <div class="container d-flex">
                 <div class="intro-w">
                     <h2 class="h2">Introduction</h2>
@@ -50,7 +50,7 @@
             </div>
         </div>
         <!-- thirdPage -->
-         <div class="about d-flex">
+        <div class="about d-flex">
             <div class="sideList d-flex">
                 <div class="content d-flex">
                     <div class="sideText d-flex fd-c">
@@ -77,9 +77,71 @@
                     <p>With over 5 years of experience, I'm proficient in HTML, CSS, JavaScript, jQuery, and React. I have a strong understanding of user experience design and accessibility. I'm always learning new technologies and techniques to stay up-to-date in the field.</p>
                 </div>
             </div>
+        </div>
+         <!-- fourthPage -->
+         <div class="l-bg">
+             <div class="contact d-flex align-items-center jc-c">
+                 <div class="sidecontact ptpb96">
+                     <div class="contactText d-flex">
+                         <h2 class="h2 fc-w">CONTACT ME</h2>
+                         <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/trending_flat_black_24dp%201.png?raw=true" alt="trending_flat_black">
+                     </div>
+                 </div>
+                 <div class="sideIcon ptpb96">
+                     <div class="icon d-flex">
+                        <a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/discord.png?raw=true" alt=""></a>
+                        <a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/instagram.png?raw=true" alt=""></a>
+                        <a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/message.png?raw=true" alt=""></a>
+                     </div>
+                 </div>
+             </div>
          </div>
-         <!-- fouthPage -->
-        <div class="footer"></div>
+         <!-- fifthPage -->
+
+
+         <div class="project d-flex fd-c align-items-flex-end">
+            <div class="title">
+                <h1 class="h2 pd-r100">My Projects</h1>
+            </div>
+            <div class="picText d-flex ">
+
+                <div class="sidePic w416">
+                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/Rectangle%2010.png?raw=true" alt="">
+                </div>
+                
+                <div class="rightPicText d-flex fd-c ml24">
+                    <div class="top-content d-flex">
+                        <div class="mainpic">
+                            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/Rectangle%2015.png?raw=true" alt="">
+                        </div>
+
+                        <div class="contactText d-flex fd-c ">
+                            <div class="contactTextP">
+                                <p>I've worked on a variety of websites, including e-commerce sites<br> blogs, and landing pages. I take pride in creating clean,<br> efficient, and user-friendly code.</p>
+                            </div>
+                            <div class="seeMore">
+                                <a href="#" class="contactPd contactBlack">SEE MORE<img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/arrow_outward-white.png?raw=true" alt=""/></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bottom-content d-flex">
+                        <div class="cellphone h306">
+                            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/Rectangle%2014.png?raw=true" alt="">
+                        </div>
+                        <div class="computer h306 ml24">
+                            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/Rectangle%2029.png?raw=true" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+         </div>
+        <div class="footer">
+            <div class="black-bg">
+                <div class="footerText">
+                    <p>all rights reserved @hexschool2023</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
